web/style.css
body {
	background : #333333;
	color : white;
	font-family : "Ubuntu Mono";
	font-size : 13px;
	margin : 0;
	text-shadow : 0 0 5px black;
}

header {
	height : 40px;
	padding : 0 15px;
	z-index : 10;
}
header * {
	display : inline-block;
}
header h1 {
	font-size : 20px;
	line-height : 40px;
	margin : 0 15px 0 0;
}
header #menu {
	float : right;
	margin : 0;
	opacity : 0.8;
	line-height : 40px;
}

#content {
	position : fixed;
		bottom : 0;
		left : 0;
		right : 0;
		top : 40px;
	overflow : auto;
	transition : 0.5s;
}

table {
	border-spacing : 0;
	width : 100%;
}

table tr:hover td {
	background : black;
}

table td, table th {
	max-height : 10px;
	padding : 1px 4px;
	position : relative;
	white-space : nowrap;
}
table td.data {
	text-align : right;
}
table tr.inactive td {
	opacity : 0.3;
}

abbr {
	border : none;
}
abbr.limited {
	display : inline-block;
	max-width : 600px;
	overflow : hidden;
	text-overflow : ellipsis;
}

.info {
	font-size : 0.65em;
	opacity : 0.5;
	text-transform : uppercase;
}

